--- a/Components/Pages/Dashboard.razor
+++ b/Components/Pages/Dashboard.razor
@@ -1,5 +1,7 @@
 ﻿@page "/dashboard"
 
+<PageTitle>Dashboard</PageTitle>
+
 <style>
     .page_404 {
         padding: 40px 0;
@@ -49,7 +51,7 @@
                         </div>
                         <div class="contant_box_404">
                             <h3 class="h2">
-                              Coming soon.......
+                                Coming soon.......
                             </h3>
                         </div>
                     </div>
