--- a/Components/Pages/Products.razor
+++ b/Components/Pages/Products.razor
@@ -29,7 +29,6 @@
         height: 45px;
         border-radius: 50%;
     }
-
 </style>
 
 <div class="container mt-5">
@@ -37,6 +36,7 @@
         @if (p != null && p.Any())
         {
             <div class="col-sm-4">
+                <MudCard Elevation="1">
                 <EditForm Model="@_p" OnValidSubmit="OnValidSubmit">
                     <DataAnnotationsValidator />
                     <MudContainer Style="max-height: 600px;">
@@ -48,15 +48,15 @@
                             </MudFileUpload>
                         </div><br />
                         <div>
-                            <p>Product Code</p>
+                            <p1>Product Code</p1>
                             <MudTextField @bind-Value="@_p.code" Clearable For="@(() => _p.code)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                         </div><br />
                         <div>
-                            <p>Product Name</p>
+                            <p1>Product Name</p1>
                             <MudTextField @bind-Value="@_p.name" Clearable For="@(() => _p.name)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                         </div><br />
                         <div>
-                            <p>Product Price</p>
+                            <p1>Product Price</p1>
                             <MudTextField @bind-Value="@_p.price" Clearable For="@(() => _p.price)" Variant="Variant.Outlined" Margin="Margin.Dense" />
                         </div>
                     </MudContainer>
@@ -66,6 +66,7 @@
                         <MudButton Variant="Variant.Filled" @onclick="Submit" Color="Color.Primary">Add Product</MudButton>
                     </MudToolBar>
                 </EditForm>
+                </MudCard>
             </div>
             <div class="col-sm-8">
                 <MudTable Class="ma-5" Dense="true" Hover="true" Items="@p" HorizontalScrollbar="true" FixedHeader="@fixed_header" FixedFooter="@fixed_footer" Height="@(fixed_header || fixed_footer ? "455px" : "")">
@@ -188,7 +189,7 @@
 
     private async Task Refresh()
     {
-        await LoadProduct();
+        await GetProducts();
     }
 
 
@@ -199,18 +200,18 @@
         if (firstRender)
         {
             role = await Loc.GetItemAsStringAsync("role");
-            await LoadProduct();       
+            await GetProducts();
         }
     }
 
-    private async Task LoadProduct()
+    private async Task GetProducts()
     {
         try
         {
             using (var client = new HttpClient())
             {
                 client.BaseAddress = new Uri($"{Nav.BaseUri}");
-                var response = await client.GetAsync($"api/Product/Products");
+                var response = await client.GetAsync($"api/Product/GetProducts");
                 if (response.IsSuccessStatusCode)
                 {
                     await Task.Delay(1000);
@@ -299,7 +300,7 @@
     {
         if (string.IsNullOrWhiteSpace(txtsearch))
         {
-            LoadProduct();
+            GetProducts();
             return;
         }
         using (HttpClient client = new HttpClient())
